--- a/artist4all_angular/src/app/components/public/login/login.component.html
+++ b/artist4all_angular/src/app/components/public/login/login.component.html
@@ -1,102 +1,136 @@
-<!--<app-user-navbar></app-user-navbar>-->
 <div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8" id="background">
-    <div class="sm:mx-auto sm:w-full sm:max-w-md">
-      <a href="/"><img src="assets/img/logo.png" class="mx-auto h-12 w-auto" alt=""></a>
-    </div>
+  <div class="sm:mx-auto sm:w-full sm:max-w-md">
+    <a href="/"><img src="assets/img/logo.png" class="mx-auto h-12 w-auto" alt=""></a>
+  </div>
 
-    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-      <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-        <form #formLogin="ngForm" name="formLogin" class="space-y-6" method="POST" (ngSubmit)="login(); formLogin.reset()">
-          <div>
-            <label for="email" class="block text-sm font-medium text-gray-700">
-              Correo electrónico
+  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
+    <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+      <form [formGroup]="loginForm" class="space-y-6" (ngSubmit)="login()">
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-700">
+            Correo electrónico
+          </label>
+          <div class="mt-1">
+            <input formControlName="email" type="email" placeholder="Introduce tu email"
+            class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+            focus:placeholder-gray-600
+            focus:bg-white
+            focus:border-purple-500
+            focus:outline-none">
+          </div>
+          <div *ngIf="email.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
+            <div *ngIf="email.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <i class="fas fa-times-circle"></i>
+              Se requiere un correo.
+            </div>
+            <div *ngIf="email.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <i class="fas fa-times-circle"></i>
+              Correo no válido.
+            </div>
+          </div>
+        </div>
+        <div class="py-2">
+          <label for="password" class="block text-sm font-medium text-gray-700">
+            Contraseña
+          </label>
+          <div class="relative">
+            <input formControlName="password" type="password" id="inputPassword" placeholder="Introduce tu contraseña"
+            class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+            focus:bg-white
+            focus:border-purple-500
+            focus:outline-none">
+            <div class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5" (click)="showOrHidePassword();">
+              <i class="fas fa-eye fa-lg hover:text-gray-400" id="showIcon"></i>
+              <i class="fas fa-eye-slash fa-lg hover:text-gray-400 hidden" id="hideIcon"></i>
+            </div>
+          </div>
+          <div *ngIf="password.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
+           <div *ngIf="password.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <i class="fas fa-times-circle"></i>
+              Se requiere una contraseña.
+            </div>
+            <div *ngIf="password.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <i class="fas fa-times-circle"></i>
+              Contraseña no válida.
+            </div>
+          </div>
+        </div>
+        <div class="flex items-center justify-between">
+          <div class="flex items-center">
+            <input id="remember_me" name="remember_me" type="checkbox"
+            class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-300 rounded">
+            <label for="remember_me" class="ml-2 block text-sm text-gray-900">
+              Recuérdame
             </label>
-            <div class="mt-1">
-              <input #inputEmail="ngModel" [(ngModel)]="email" placeholder="Introduce tu email" id="email" name="email" type="email" autocomplete="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required class="appearance-none block mb-4 w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
-            </div>
-            <span *ngIf="inputEmail.invalid && inputEmail.dirty" class="bg-red-100 text-red-900 p-2 rounded-md mt-5 font-normal text-sm"> El correo electrónico no es correcto</span>
           </div>
-
-          <div>
-            <label for="password" class="block text-sm font-medium text-gray-700">
-              Contraseña
-            </label>
-            <div class="mt-1">
-              <!-- password must contain 8 or more characters that are of at least one number, and one uppercase and lowercase letter -->
-              <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña" id="password" name="password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm mb-4">
-            </div>
-            <span *ngIf="inputPassword.invalid && inputPassword.dirty" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-5 text-sm">La contraseña tiene que tener mínimo 8 carácteres, un número, una mayúscula y una minúscula.</span>
+          <div class="text-sm">
+            <a href="#" class="font-medium text-purple-600 hover:text-purple-500">
+              ¿Has olvidado tu contraseña?
+            </a>
           </div>
+        </div>
+        <div>
+          <button type="submit"
+          class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700
+          focus:outline-none
+          focus:ring-2
+          focus:ring-offset-2
+          focus:ring-purple-500">
+            Entra
+          </button>
+        </div>
+        <div *ngIf="loginError" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <i class="fas fa-times-circle"></i>
+          Usuario incorrecto.
+        </div>
+      </form>
+      <div class="text-sm">
+        <p href="#" class="font-normal text-center text-black mt-6">
+          ¿Aún no tienes una cuenta? Regístrate <a routerLink="/register" class="font-medium text-purple-600 hover:text-purple-500">aquí</a>
+        </p>
+      </div>
 
-          <div class="flex items-center justify-between">
-            <div class="flex items-center">
-              <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-300 rounded">
-              <label for="remember_me" class="ml-2 block text-sm text-gray-900">
-                Recuérdame
-              </label>
-            </div>
-
-            <div class="text-sm">
-              <a href="#" class="font-medium text-purple-600 hover:text-purple-500">
-                ¿Has olvidado tu contraseña?
-              </a>
-            </div>
+      <!--<div class="mt-6">
+        <div class="relative">
+          <div class="absolute inset-0 flex items-center">
+            <div class="w-full border-t border-gray-300"></div>
           </div>
-
-          <div>
-            <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
-              Entra
-            </button>
+          <div class="relative flex justify-center text-sm">
+            <span class="px-2 bg-white text-gray-500">
+              o Registrate con
+            </span>
           </div>
-        </form>
-
-        <div class="text-sm">
-          <p href="#" class="font-normal text-center text-black mt-6">
-            ¿Aún no tienes una cuenta? Regístrate <a routerLink="/register" class="font-medium text-purple-600 hover:text-purple-500">aquí</a>
-          </p>
         </div>
 
-        <!--<div class="mt-6">
-          <div class="relative">
-            <div class="absolute inset-0 flex items-center">
-              <div class="w-full border-t border-gray-300"></div>
-            </div>
-            <div class="relative flex justify-center text-sm">
-              <span class="px-2 bg-white text-gray-500">
-                Or continue with
-              </span>
-            </div>
+        <div class="mt-6 grid grid-cols-3 gap-3">
+          <div>
+            <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+              <span class="sr-only">Sign in with Facebook</span>
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                <path fill-rule="evenodd" d="M20 10c0-5.523-4.477-10-10-10S0 4.477 0 10c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V10h2.54V7.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V10h2.773l-.443 2.89h-2.33v6.988C16.343 19.128 20 14.991 20 10z" clip-rule="evenodd" />
+              </svg>
+            </a>
           </div>
 
-          <div class="mt-6 grid grid-cols-3 gap-3">
-            <div>
-              <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                <span class="sr-only">Sign in with Facebook</span>
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                  <path fill-rule="evenodd" d="M20 10c0-5.523-4.477-10-10-10S0 4.477 0 10c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V10h2.54V7.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V10h2.773l-.443 2.89h-2.33v6.988C16.343 19.128 20 14.991 20 10z" clip-rule="evenodd" />
-                </svg>
-              </a>
-            </div>
-
-            <div>
-              <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                <span class="sr-only">Sign in with Twitter</span>
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                  <path d="M6.29 18.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0020 3.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.073 4.073 0 01.8 7.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 010 16.407a11.616 11.616 0 006.29 1.84" />
-                </svg>
-              </a>
-            </div>
-
-            <div>
-              <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                <span class="sr-only">Sign in with GitHub</span>
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
-                  <path fill-rule="evenodd" d="M10 0C4.477 0 0 4.484 0 10.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0110 4.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.942.359.31.678.921.678 1.856 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0020 10.017C20 4.484 15.522 0 10 0z" clip-rule="evenodd" />
-                </svg>
-              </a>
-            </div>
+          <div>
+            <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+              <span class="sr-only">Sign in with Twitter</span>
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                <path d="M6.29 18.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0020 3.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.073 4.073 0 01.8 7.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 010 16.407a11.616 11.616 0 006.29 1.84" />
+              </svg>
+            </a>
           </div>
-        </div>-->
-      </div>
+
+          <div>
+            <a href="#" class="w-full inline-flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
+              <span class="sr-only">Sign in with GitHub</span>
+              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                <path fill-rule="evenodd" d="M10 0C4.477 0 0 4.484 0 10.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0110 4.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.942.359.31.678.921.678 1.856 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0020 10.017C20 4.484 15.522 0 10 0z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>-->
     </div>
   </div>
+</div>
