--- a/artist4all_angular/src/app/components/public/register/register.component.html
+++ b/artist4all_angular/src/app/components/public/register/register.component.html
@@ -90,8 +90,8 @@
               <label for="password" class="block text-sm font-medium text-gray-700">
                 Contraseña
               </label> -->
-              <!-- password must contain 8 or more characters that are of at least one number, and one uppercase and lowercase letter -->
-              <!-- <div class="mt-1">
+<!-- password must contain 8 or more characters that are of at least one number, and one uppercase and lowercase letter -->
+<!-- <div class="mt-1">
                 <input #inputPassword="ngModel" [(ngModel)]="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                  placeholder="Introduce tu contraseña"
                   id="password" name="password" type="password" autocomplete="current-password" required
@@ -143,7 +143,7 @@
         </p>
       </div> -->
 
-      <!--<div class="mt-6">
+<!--<div class="mt-6">
           <div class="relative">
             <div class="absolute inset-0 flex items-center">
               <div class="w-full border-t border-gray-300"></div>
@@ -184,12 +184,12 @@
             </div>
           </div>
         </div>-->
-  <!--   </div>
+<!--   </div>
   </div>
 </div>
  -->
 
- <div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8">
+<div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
     <a href="/"><img src="assets/img/logo.png" class="mx-auto h-12 w-auto" alt=""></a>
   </div>
@@ -204,18 +204,19 @@
           <div class="mt-1">
             <div class="flex items-center justify-center md:justify-start mt-5 mb-2">
               <input formControlName="isArtist" type="radio" value="0" name="isArtist"
-              class="focus:ring-purple-500 h-4 w-4  text-purple-600 border-gray-300">
+                class="focus:ring-purple-500 h-4 w-4  text-purple-600 border-gray-300">
               <label for="typeFollower" class="ml-2 mr-2 text-base font-medium text-gray-700">
                 Seguidor
               </label>
               <input formControlName="isArtist" type="radio" value="1" name="isArtist"
-              class="focus:ring-purple-500 h-4 w-4 text-purple-600 border-gray-300">
+                class="focus:ring-purple-500 h-4 w-4 text-purple-600 border-gray-300">
               <label for="typeArtist" class="ml-2 text-base font-medium text-gray-700">
                 Artista
               </label>
             </div>
-            <div *ngIf="isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-              <div *ngIf="registerForm.controls['isArtist'].invalid" class="font-normal text-left bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+            <div *ngIf="isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+              <div *ngIf="registerForm.controls['isArtist'].invalid"
+                class="font-normal text-left bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                 <i class="fas fa-times-circle"></i>
                 Se ha de seleccionar una opción
               </div>
@@ -227,20 +228,21 @@
             Nombre
           </label>
           <div class="mt-1">
-            <input formControlName="name" type="text" placeholder="Introduce tu nombre"
-            class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+            <input formControlName="name" type="text" placeholder="Introduce tu nombre" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
             focus:placeholder-gray-600
             focus:bg-white
             focus:border-purple-500
             focus:outline-none">
           </div>
-          <div *ngIf="name.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-            <div *ngIf="name.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <div *ngIf="name.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+            <div *ngIf="name.errors.required"
+              class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               Se requiere un nombre.
             </div>
           </div>
-          <div *ngIf="name.errors && name.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <div *ngIf="name.errors && name.errors.pattern"
+            class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
             <i class="fas fa-times-circle"></i>
             Nombre no válido
           </div>
@@ -251,20 +253,21 @@
               Primer apellido
             </label>
             <div class="mt-1">
-              <input formControlName="surname1" type="text" placeholder="Introduce tu primer apellido"
-              class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+              <input formControlName="surname1" type="text" placeholder="Introduce tu primer apellido" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
               focus:placeholder-gray-600
               focus:bg-white
               focus:border-purple-500
               focus:outline-none">
             </div>
-            <div *ngIf="surname1.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-              <div *ngIf="surname1.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+            <div *ngIf="surname1.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+              <div *ngIf="surname1.errors.required"
+                class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                 <i class="fas fa-times-circle"></i>
                 Se requiere el 1r apellido.
               </div>
             </div>
-            <div *ngIf="surname1.errors && surname1.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+            <div *ngIf="surname1.errors && surname1.errors.pattern"
+              class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               El 1r Apellido no es válido.
             </div>
@@ -274,20 +277,21 @@
               Segundo apellido.
             </label>
             <div class="mt-1">
-              <input formControlName="surname2" type="text" placeholder="Introduce tu segundo apellido"
-              class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+              <input formControlName="surname2" type="text" placeholder="Introduce tu segundo apellido" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
               focus:placeholder-gray-600
               focus:bg-white
               focus:border-purple-500
               focus:outline-none">
             </div>
-            <div *ngIf="surname2.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-              <div *ngIf="surname2.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+            <div *ngIf="surname2.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+              <div *ngIf="surname2.errors.required"
+                class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                 <i class="fas fa-times-circle"></i>
                 Se requiere el 2º apellido.
               </div>
             </div>
-            <div *ngIf="surname2.errors && surname2.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+            <div *ngIf="surname2.errors && surname2.errors.pattern"
+              class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               El 2º Apellido no es válido.
             </div>
@@ -298,20 +302,21 @@
             Correo electrónico
           </label>
           <div class="mt-1">
-            <input formControlName="email" type="email" placeholder="Introduce tu email"
-            class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+            <input formControlName="email" type="email" placeholder="Introduce tu email" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
             focus:placeholder-gray-600
             focus:bg-white
             focus:border-purple-500
             focus:outline-none">
           </div>
-          <div *ngIf="email.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-            <div *ngIf="email.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <div *ngIf="email.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+            <div *ngIf="email.errors.required"
+              class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               Se requiere un correo electrónico.
             </div>
           </div>
-          <div *ngIf="email.errors && email.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <div *ngIf="email.errors && email.errors.pattern"
+            class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
             <i class="fas fa-times-circle"></i>
             Correo electrónico no válido.
           </div>
@@ -321,20 +326,21 @@
             Nombre de usuario
           </label>
           <div class="mt-1">
-            <input formControlName="username" type="text" placeholder="Introduce tu nombre de usuario"
-            class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+            <input formControlName="username" type="text" placeholder="Introduce tu nombre de usuario" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
             focus:placeholder-gray-600
             focus:bg-white
             focus:border-purple-500
             focus:outline-none">
           </div>
-          <div *ngIf="username.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-            <div *ngIf="username.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <div *ngIf="username.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+            <div *ngIf="username.errors.required"
+              class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
               <i class="fas fa-times-circle"></i>
               Se requiere un nombre de usuario.
             </div>
           </div>
-          <div *ngIf="username.errors && username.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+          <div *ngIf="username.errors && username.errors.pattern"
+            class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
             <i class="fas fa-times-circle"></i>
             Nombre de usuario no válido
           </div>
@@ -346,23 +352,26 @@
                 Contraseña
               </label>
               <div class="relative">
-                <input formControlName="password" type="password" id="inputPassword" placeholder="Introduce tu contraseña"
-                class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+                <input formControlName="password" type="password" id="inputPassword"
+                  placeholder="Introduce tu contraseña" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
                 focus:bg-white
                 focus:border-purple-500
                 focus:outline-none">
-                <div class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5" (click)="showOrHidePassword();">
+                <div class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
+                  (click)="showOrHidePassword();">
                   <i class="fas fa-eye fa-lg hover:text-gray-400" id="showIcon"></i>
                   <i class="fas fa-eye-slash fa-lg hover:text-gray-400 hidden" id="hideIcon"></i>
                 </div>
               </div>
-              <div *ngIf="password.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass] = "'error'">
-               <div *ngIf="password.errors.required" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <div *ngIf="password.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                <div *ngIf="password.errors.required"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                   <i class="fas fa-times-circle"></i>
                   Se requiere una contraseña.
                 </div>
               </div>
-              <div *ngIf="password.errors && password.errors.pattern" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <div *ngIf="password.errors && password.errors.pattern"
+                class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
                 <i class="fas fa-times-circle"></i>
                 Contraseña no válida.
               </div>
@@ -374,16 +383,17 @@
             </label>
             <div class="mt-1">
               <input formControlName="passwordConfirm" type="password" placeholder="Confirma tu contraseña"
-                id="passwordConfirm"  class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+                id="passwordConfirm" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
                 focus:placeholder-gray-600
                 focus:bg-white
                 focus:border-purple-500
                 focus:outline-none">
             </div>
-               <div *ngIf="checkMatchPasswords()" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
-                 <i class="fas fa-times-circle"></i>
-                 Las contraseñas deben de coincidir.
-               </div>
+            <div *ngIf="checkMatchPasswords()"
+              class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+              <i class="fas fa-times-circle"></i>
+              Las contraseñas deben de coincidir.
+            </div>
           </div>
         </div>
         <div class="flex items-center justify-between">
@@ -409,6 +419,7 @@
       </form>
       <div class="text-sm">
         <p href="#" class="font-normal text-center text-black mt-6">
-          ¿Ya tienes una cuenta? Entra <a routerLink="/login" class="font-medium text-purple-600 hover:text-purple-500">aquí</a>
+          ¿Ya tienes una cuenta? Entra <a routerLink="/login"
+            class="font-medium text-purple-600 hover:text-purple-500">aquí</a>
         </p>
       </div>
