styled profile page

--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -24,7 +24,7 @@
             </a>
 
             <a routerLink="/store"
-              class="text-gray-600 bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+              class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
               <!-- Heroicon name: outline/fire -->
               <svg class="text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
                 viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
