--- a/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-password/user-settings-password.component.html
@@ -97,8 +97,8 @@
           </nav>
         </aside>
 
-        <form #formPassword="ngForm" id="formPassword" class="divide-y divide-gray-200 lg:col-span-9" method="POST"
-          (ngSubmit)="editPassword(); formPassword.reset()">
+        <form [formGroup]="passwordForm" class="divide-y divide-gray-200 lg:col-span-9" method="POST"
+          (ngSubmit)="editPassword();">
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
             <div>
               <h2 class="text-lg leading-6 font-medium text-gray-900">Cambiar mi contraseña</h2>
@@ -106,19 +106,56 @@
 
             <div class="mt-6 grid grid-cols-12 gap-6">
               <div class="col-span-12">
-                <label for="newPassowrd" class="block text-sm font-medium text-gray-700">Nueva contraseña:</label>
-                <input #inputNewPassword="ngModel" [(ngModel)]="newPassword" type="password" name="newPassword"
-                  id="newPassword" placeholder="Mi nueva contraseña" required autocomplete="family-name"
-                  class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-light-blue-500 focus:border-light-blue-500 sm:text-sm">
+                <label for="password" class="block text-sm font-medium text-gray-700">
+                  Contraseña
+                </label>
+                <div class="relative">
+                  <input formControlName="password" type="password" id="inputPassword" placeholder="Introduce tu nueva contraseña"
+                    class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+                  focus:bg-white
+                  focus:border-purple-500
+                  focus:outline-none">
+                  <div class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5"
+                    (click)="showOrHidePassword();">
+                    <i class="fas fa-eye fa-lg hover:text-gray-400" id="showIcon"></i>
+                    <i class="fas fa-eye-slash fa-lg hover:text-gray-400 hidden" id="hideIcon"></i>
+                  </div>
+                </div>
+                <div *ngIf="password.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                  <div *ngIf="password.errors.required"
+                    class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                    <i class="fas fa-times-circle"></i>
+                    Se requiere una contraseña.
+                  </div>
+                </div>
+                <div *ngIf="password.errors && password.errors.pattern"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  Contraseña no válida.
+                </div>
               </div>
 
               <div class="col-span-12">
                 <label for="confirmPassowrd" class="block text-sm font-medium text-gray-700">Confirma tu nueva
                   contraseña:</label>
-                <input #inputConfirmPassword="ngModel" [(ngModel)]="confirmPassword" type="password"
-                  name="confirmPassword" id="confirmPassword" placeholder="Confirma tu contraseña" required
-                  autocomplete="family-name"
-                  class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-light-blue-500 focus:border-light-blue-500 sm:text-sm">
+                  <input formControlName="passwordConfirm" type="password" placeholder="Confirma tu contraseña"
+                  id="passwordConfirm" class="text-md block px-3 py-2 rounded-lg w-full bg-white border-2 border-gray-300 shadow-md
+                  focus:placeholder-gray-600
+                  focus:bg-white
+                  focus:border-purple-500
+                  focus:outline-none">
+                <div *ngIf="passwordConfirm.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                  <div *ngIf="passwordConfirm.errors.required"
+                    class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                    <i class="fas fa-times-circle"></i>
+                    Se requiere la confirmación.
+                  </div>
+                </div>
+                <div *ngIf="checkMatchPasswords()"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  Las contraseñas deben de coincidir.
+                </div>
               </div>
             </div>
           </div>
