Adaptación del slim versión más reciente, estandarización de rutas

--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -35,7 +35,7 @@
                         </button>
 
                         <button type="button" id="pendingContainer" *ngIf="!isMyProfile && status_follow == 2"
-                          (click)="cancelRequestOrUnfollowUser();"
+                          (click)="updateFollowRequest();"
                           class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                           <span class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -45,7 +45,7 @@
                         </button>
 
                         <button type="button" id="unfollowedContainer" *ngIf="!isMyProfile && status_follow == 3"
-                          (click)="cancelRequestOrUnfollowUser();"
+                          (click)="updateFollowRequest();"
                           class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                           <span class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -70,9 +70,11 @@
                   <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
                     <div id="n_Followers"
                       class="inline-flex justify-center px-4 py-2 text-sm font-medium rounded-md text-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
-                      <a routerLink="list/followers"><span class="p-3 hover:text-purple-600 no-underline">Seguidores: {{
+                      <a routerLink="/user/{{ id }}/followers"><span
+                          class="p-3 hover:text-purple-600 no-underline">Seguidores: {{
                           n_followers }}</span></a>
-                      <a routerLink="list/followed"><span class="p-3 hover:text-purple-600 no-underline">Seguidos: {{
+                      <a routerLink="/user/{{ id }}/followed"><span
+                          class="p-3 hover:text-purple-600 no-underline">Seguidos: {{
                           n_followed }}</span></a>
                     </div>
                   </div>
@@ -93,7 +95,7 @@
                     </button>
 
                     <button type="button" id="pendingContainer" *ngIf="!isMyProfile && status_follow == 2"
-                      (click)="cancelRequestOrUnfollowUser();"
+                      (click)="updateFollowRequest();"
                       class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                       <span class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -103,7 +105,7 @@
                     </button>
 
                     <button type="button" id="unfollowedContainer" *ngIf="!isMyProfile && status_follow == 3"
-                      (click)="cancelRequestOrUnfollowUser();"
+                      (click)="updateFollowRequest();"
                       class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                       <span class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -158,7 +160,7 @@
                       <span class="hover:underline">{{ publication.upload_date }}</span>
                     </p>
                     <div class="inline-block ml-20" *ngIf="isMyProfile">
-                      <a class="inline-block" routerLink="/profile/my/publication/{{ publication.id }}">
+                      <a class="inline-block" routerLink="/user/{{ id }}/publication/{{ publication.id }}">
                         <i class="fas fa-edit fa-lg hover:text-blue-700"></i>
                       </a>
                       <a class="inline-block" *ngIf="isMyProfile" (click)="deletePublication(i);">
