--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -37,7 +37,7 @@
               </span>
             </a>
 
-            <a routerLink="/messages"
+            <a routerLink="/user/{{ id }}/messages"
               class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
               <!-- Heroicon name: outline/user-group -->
               <svg class="text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
@@ -47,11 +47,11 @@
                 </path>
               </svg>
               <span class="truncate">
-                <a routerLink="/message">Mensajería</a>
+                <a routerLink="/user/{{ id }}/messages">Mensajería</a>
               </span>
             </a>
 
-            <a routerLink="/user"
+            <a routerLink="/user/list"
               class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
               <!-- Heroicon name: outline/trending-up -->
               <svg class="text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6"
@@ -61,14 +61,14 @@
                   d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
               </svg>
               <span class="truncate">
-                <a routerLink="/user">Usuarios</a>
+                <a routerLink="/user/list">Usuarios</a>
               </span>
             </a>
           </div>
         </nav>
       </div>
       <main class="lg:col-span-8 xl:col-span-7">
-        <button routerLink="/profile/my/publication"> Crear publicación </button> <!-- todo faltan estilos -->
+        <button routerLink="/user/{{ id }}/publications"> Crear publicación </button> <!-- todo faltan estilos -->
         <form action="/posts/new" method="POST" class="flex mb-4 flex-col">
           <textarea class="w-full resize-y rounded-md shadow border-0 text-sm flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
             rows="5" name="content" placeholder="Escribe algo..."></textarea>
