--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -56,11 +56,11 @@
           </a> -->
             <div *ngFor="let notification of notifications; index as i;">
               <div class="flex items-center px-4 py-3 border-b hover:bg-gray-100 -mx-2">
-                <img routerLink="/profile/{{ notification.user_responsible.username }}"
+                <img routerLink="/user/{{ notification.user_responsible.id }}/profile"
                   class="h-8 w-8 rounded-full object-cover mx-1" src="{{ notification.user_responsible.imgAvatar }}"
                   alt="avatar">
                 <p class="text-gray-600 text-sm mx-2">
-                  <a class="font-bold" routerLink="/profile/{{ notification.user_responsible.username }}"> {{
+                  <a routerLink="/user/{{ notification.user_responsible.id }}/profile" class="font-bold"> {{
                     notification.user_responsible.username }} </a>
                   {{ notification.bodyNotification }}
                   <span class="font-bold"></span> . {{ notification.notification_date }}
@@ -116,9 +116,9 @@
             <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1
             bg-white ring-1 ring-black ring-opacity-5 hidden z-40" id="menu-toggle" role="menu"
               aria-orientation="vertical" aria-labelledby="user-menu">
-              <a routerLink="/profile/my" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
+              <a routerLink="/user/{{ id }}/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
               text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-user mr-3"></i>Mi perfil</a>
-              <a routerLink="/settings/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
+              <a routerLink="/user/{{ id }}/settings/profile" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
               text-gray-700 hover:bg-gray-100" role="menuitem"><i class="fas fa-cog mr-3"></i>Configuración</a>
               <a routerLink="" (click)="toggleMenuProfile()" class="block px-4 py-2 text-sm
               text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()"><i
@@ -140,10 +140,10 @@
       <a routerLink="/store"
         class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Tienda</a>
 
-      <a routerLink="/message"
+      <a routerLink="/user/{{ id }}/messages"
         class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Mensajes</a>
 
-      <a routerLink="/user"
+      <a routerLink="/user/list"
         class="hover:bg-gray-50 block rounded-md py-2 px-3 text-base font-medium text-gray-900">Usuarios</a>
     </div>
     <div class="border-t border-gray-200 pt-4 pb-3">
@@ -166,10 +166,10 @@
         </button>
       </div>
       <div class="mt-3 max-w-3xl mx-auto px-2 space-y-1 sm:px-4">
-        <a routerLink="/profile/my" (click)="toggleMenuProfile()"
+        <a routerLink="/user/{{ id }}/profile" (click)="toggleMenuProfile()"
           class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900"
           id="menu-toggle" role="menu">Mi perfil</a>
-        <a routerLink="/settings/profile" (click)="toggleMenuProfile()" role="menuitem"
+        <a routerLink="/user/{{ id }}/settings/profile" (click)="toggleMenuProfile()" role="menuitem"
           class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Configuración</a>
         <a routerLink="" (click)="toggleMenuProfile()" role="menuitem"
           class="block rounded-md py-2 px-3 text-base font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-900">Cerrar
