--- a/artist4all_angular/src/app/components/secure/user-sidebar/user-sidebar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-sidebar/user-sidebar.component.html
@@ -51,7 +51,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
         </svg>
         <span class="truncate">
-          <a routerLink="/user" class="p-3 hover:text-purple-600">Usuarios</a>
+          <a routerLink="/user/list" class="p-3 hover:text-purple-600">Usuarios</a>
         </span>
       </a>
     </div>
