--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -4,67 +4,67 @@
 <app-user-navbar *ngIf="loaded"></app-user-navbar>
 
 <div class="flex bg-white" *ngIf="loaded">
-  <div class="hidden lg:block lg:w-80 lg:pl-8 lg:pt-10">
-    <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300">
+  <div class="hidden bg-gray-800 lg:block lg:w-72" style="padding-left: 0;">
+    <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px;">
       <div class="pb-8 space-y-1">
         <!-- Current: "bg-gray-200 text-gray-900", Default: "text-gray-600 hover:bg-gray-50" -->
         <a routerLink="/home"
-          class="bg-gray-50 text-gray-600 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
+          class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
           aria-current="page">
           <!-- Heroicon name: outline/home -->
-          <svg class="text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
             viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
           </svg>
           <span class="truncate">
-            <a routerLink="/home">Home</a>
+            <a routerLink="/home" class="hover:text-gray-200">Home</a>
           </span>
         </a>
 
         <a routerLink="/store"
-          class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
           <!-- Heroicon name: outline/fire -->
-          <svg class="text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
             </path>
           </svg>
           <span class="truncate">
-            <a routerLink="/store">Tienda</a>
+            <a routerLink="/store" class="hover:text-gray-200">Tienda</a>
           </span>
         </a>
 
         <a routerLink="/messages"
-          class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
           <!-- Heroicon name: outline/user-group -->
-          <svg class="text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4">
             </path>
           </svg>
           <span class="truncate">
-            <a routerLink="/messages">Mensajería</a>
+            <a routerLink="/messages" class="hover:text-gray-200">Mensajería</a>
           </span>
         </a>
 
         <a routerLink="/user/list"
-          class="text-gray-600 hover:bg-gray-50 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
           <!-- Heroicon name: outline/trending-up -->
-          <svg class="text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6"
+          <svg class="text-gray-200 group-hover:text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6"
             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
           </svg>
           <span class="truncate">
-            <a routerLink="/user/list">Usuarios</a>
+            <a routerLink="/user/list" class="hover:text-gray-200">Usuarios</a>
           </span>
         </a>
       </div>
     </nav>
   </div>
-  <div class="flex flex-col lg:ml-6 min-w-0 flex-1 overflow-hidden">
+  <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
     <div class="flex-1 relative z-0 flex overflow-hidden">
       <main class="flex-1 relative z-0 focus:outline-none xl:order-last" tabindex="0">
         <article>
